[package]
name = "mgw_generic"
version = "0.1.0"
edition = "2021"

[dependencies]
modbus_meter_generic = { path = "modbus_meter_generic" }
config_meter_generic = { path = "config_meter_generic" }
statemachine_meter_generic = { path = "statemachine_meter_generic" }
statemachine_auth = { path = "statemachine_auth" }
statemachine_modbus = { path = "statemachine_modbus" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"



[workspace]
members = [
    "modbus_meter_generic",
    "statemachine_meter_generic",
    "statemachine_modbus",
    "config_meter_generic", 
    "statemachine_auth",
]


