[package]
name = "statemachine_read"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
config_meter_generic = { path = "../config_meter_generic" }
modbus_meter_generic = { path = "../modbus_meter_generic" }
tokio-modbus = "0.14.0"
statemachine_modbus = { path = "../statemachine_modbus" }
log = "0.4"
